src/styles/accountSwitch.styl
@import 'cozy-ui'

.account-switch
    position relative
    padding-bottom 20px
    margin-bottom 20px
    border-bottom 1px solid grey-09

.account-switch-button
    margin 10px 0
    width 100%
    padding 15px 10%
    border 0
    text-align left
    outline 0
    background  embedurl('../assets/icons/icon-chevron-down.svg') 90% center no-repeat

    .account-name
        max-width 90%
        overflow hidden
        font-weight bold
        color grey-08
        text-overflow ellipsis
        white-space nowrap

    .account-num
        margin-top 8px
        font-size .8em
        color grey-11
        font-weight normal

    &.active
        background grey-09

    &:focus
        background grey-09

.account-switch-menu
    position absolute
    top 80%
    left 10%
    z-index 1
    overflow auto
    width 100%
    max-height 350px
    padding 0
    border solid 1px rgba(50, 54, 63, .12)
    border-radius 4px
    background white
    box-shadow 0 1px 3px 0 rgba(50, 54, 63, .19), 0 6px 18px 0 rgba(50, 54, 63, .19)

    h4
        margin 10px 0
        padding 0 16px
        font-size .8em
        color grey-11

    ul
        list-style none
        margin 0
        padding 0


    button
        box-sizing border-box
        width 100%
        overflow hidden
        padding 8px 26px 8px 16px
        border 0
        border-left 3px solid transparent
        background 0
        color grey-08
        text-overflow ellipsis
        white-space nowrap
        cursor pointer
        text-align left

        &:focus
            outline 0
            background grey-09

    a
        display block
        text-transform uppercase
        padding 8px 18px
        font-size .8em
        font-weight bold

    .active
        border-left-color dodger-blue
        background  embedurl('../assets/icons/icon-checked-blue.svg') 98% center no-repeat
        font-weight bold

    .account-count
        padding-left .5em
        color grey-11
        font-size .8em

